# work

./: .gitignore  COPYING  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
m4/: m4_ax_with_curses.m4
notes/: foreword
src/: .gitignore  Makefile.am  Makefile.in  controller.cpp  controller.h  delegate.cpp  delegate.h  main.cpp  mode.cpp  mode.h  model.cpp  model.h  system.h  task.cpp  task.h  view.cpp  view.h  viewopts.cpp  viewopts.h
src/controllers/: taskcontroller.cpp  taskcontroller.h
src/modes/: normal.cpp  normal.h
src/views/: taskview.cpp  taskview.h
